syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.bytecamp.program_repair.backend.grpc";
option java_outer_classname = "RepairServerProto";

service RepairServer {
  rpc SubmitTask(RepairTaskRequest) returns (stream RepairTaskResponse) {}

}

message RepairTaskRequest {
  LocationType location_type = 1;
  string location = 2;
  string project = 3;
  string algorithm = 4;
  bytes content = 5;
  enum LocationType {
    PATH = 0;
    GIT = 1;
    ZIP = 2;
  }
}

message RepairTaskResponse {
  FrameType frame_type = 1;
  string message = 2;
  repeated RepairTaskResult result = 3;
  enum FrameType {
    STDOUT = 0;
    RESULT = 1;
  }
}

message RepairTaskResult {
  bool success = 1;
  repeated Patch patch = 3;
  message Patch {
    string modified = 2;
    string source_path = 3;
  }
}